# RealTajoFCBack

./: .env.example  .gitignore  README.md  main.py  requirements.txt  server.py  setup.cfg
.github/workflows/: main_realtajoback.yml  scrape.yml
scripts/: run_scraper.py  smoke_calendar.py  smoke_classification.py  smoke_matchday.py
src/app/: __main__.py  main.py
src/app/application/: process_classification.py  process_document.py  process_matchday.py  process_matchday_results.py  process_real_tajo_calendar.py  process_top_scorers.py  retrieve_online_players.py
src/app/config/: settings.py
src/app/domain/models/: classification.py  document.py  matchday.py  matchday_results.py  player_session.py  real_tajo_calendar.py  top_scorers.py
src/app/domain/repositories/: classification_repository.py  document_repository.py  matchday_repository.py  online_player_repository.py  real_tajo_calendar_repository.py  top_scorer_repository.py
src/realtajo_back.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
temp/: curls.txt  real_tajo_pipeline.bat
tests/: conftest.py  test_app_routes.py  test_classification_extractor.py  test_json_classification_repository.py  test_json_matchday_repository.py  test_json_real_tajo_calendar_repository.py  test_json_top_scorers_repository.py  test_matchday_endpoints.py  test_matchday_model.py  test_matchday_pdf_parser.py  test_real_tajo_calendar_extractor.py  test_real_tajo_calendar_model.py  test_real_tajo_calendar_parser.py  test_settings.py  test_top_scorers_endpoint.py  test_top_scorers_parser.py  test_top_scorers_scraper.py
(+20 files in other folders)
