[metadata]
name = realtajo-back
version = 0.1.0
description = Real Tajo FC backend services
long_description = file: README.md
long_description_content_type = text/markdown
author = Real Tajo FC

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.10
py_modules = server, main

[options.packages.find]
where = src
