[metadata]
name = realtajo-back
version = 0.1.0
description = Real Tajo FC backend services
long_description = file: README.md
long_description_content_type = text/markdown
author = Real Tajo FC

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.10
py_modules = server, main
install_requires =
    fastapi==0.110.0
    uvicorn[standard]==0.29.0
    gunicorn==23.0.0
    httpx==0.27.0
    python-multipart==0.0.9
    openpyxl==3.1.2
    PyPDF2==3.0.1

[options.packages.find]
where = src
